--- a/index.html
+++ b/index.html
@@ -24,12 +24,22 @@
 
     <!-- embed external JavaScript file for app interaction -->
     <script src="js/script.js"></script>
+    
+    <script>
+        $(function() {
+        listChannels(compareNew); 
+        loadEmojis();
+        console.log( "The DOM is now loaded and can be manipulated." );
+        });
+    
+    </script>
+   
 
 </head>
 
 <!-- render all channels when the body has loaded -->
 <!-- #10 #sorting: append all channels in new #sort order when the body has #load ed ; #10 #emojis added more #suitable-->
-<body onload="listChannels(compareNew); loadEmojis()">
+<body onload>
 
 <!-- channel area -->
 <!-- #9 #shdw #elv: channels view goes 16dp high, like a nav drawer -->
